--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    ext.kotlin_version = "1.5.30"
+    ext.kotlin_coroutine_version = "1.5.2"
+    ext.koin_version = "3.1.2"
+    ext.lifecycle_version = "2.3.1"
+    ext.retrofit_version = "2.9.0"
+    ext.okhttp_version = "4.9.0"
+    ext.chunker_version = "3.5.2"
+    ext.dataStore_version = "1.0.0"
     repositories {
         google()
         mavenCentral()
